src/test/deca/syntax/invalid/class/asm_method_called_asm.deca
/// Description:
// 	  Test syntax with a method with an asm body called asm
// 	
// Resultats:
// 	  Syntax error
//    line 11
// Historique:
// 	  cree le 18/01/2023

class A {
    void asm()
        asm("Hello");
}